--- a/src/component/card/card.scss
+++ b/src/component/card/card.scss
@@ -1,3 +1,96 @@
-.cardHolder {
-  background: pink;
+$grayLight:#f0f0f0;
+
+$gray:#707070;
+
+$grayDark:#313131;
+
+$blue:#337ab7;
+
+.cardListing {
+  background: $grayLight;
+  padding: 30px 0;
+
+  .cardHolder {
+
+    .cartItem {
+      background: #fff;
+      border-radius: 5px;
+      margin-bottom: 30px;
+
+      .imgWrp {
+        width: 100%;
+        height: 150px;
+        overflow: hidden;
+        position: relative;
+        border-radius: 5px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+
+
+        span {
+          background-color: $grayDark;
+          bottom: 15px;
+          color: #fff;
+          font-size: 15px;
+          left: 15px;
+          line-height: 1;
+          padding: 8px 12px;
+          position: absolute;
+        }
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      .txtWrp {
+        padding: 15px;
+
+
+        h3 {
+          display: block;
+          font-size: 18px;
+          font-weight: 300;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          color: $blue;
+        }
+
+        h4 {
+          color: $gray;
+          font-size: 14px;
+          margin: -5px 0 15px 0;
+        }
+
+        .options {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+
+          .rightOption {
+            svg:last-child {
+              background: red;
+            }
+          }
+
+          span {
+            font-size: 14px;
+            line-height: 1.42857;
+            margin-left: 5px;
+            color: $gray;
+          }
+
+          svg {
+            color: $gray;
+          }
+        }
+      }
+    }
+  }
+
+  aside {
+    background: red;
+  }
 }
