--- a/src/container/style.scss
+++ b/src/container/style.scss
@@ -134,6 +134,7 @@ $lightNavy:#337ab7;
         margin: 0;
         position: absolute;
         display: none;
+        z-index: 999;
 
         li {
           a {
