return Object keys over and over

--- a/src/component/card/card.scss
+++ b/src/component/card/card.scss
@@ -51,6 +51,9 @@ $blue:#337ab7;
           bottom: auto;
         }
 
+        .noFeatured {
+          display: none;
+        }
 
         img {
           width: 100%;
