styled Component - add filter

--- a/src/component/sidebar/sidebar.scss
+++ b/src/component/sidebar/sidebar.scss
@@ -7,35 +7,63 @@ aside {
   margin-left: 30px;
   border-radius: 5px;
 
-  label {
-    display: inline-block;
-    max-width: 100vh;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #fff;
-    font-size: 14px;
-    line-height: 1.42857;
-  }
+  form {
+    display: flex;
+    flex-direction: column;
 
-  select {
-    border: 0;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.25);
-    outline: 0;
-    height: 40px;
-    padding: 6px 8px;
-    font-size: 14px;
-    line-height: 1.42857;
-    color: #555555;
-    background: #fff;
-    margin-bottom: 20px;
-  }
+    label {
+      &:first-child {}
 
-  button {
-    background: #034563;
-    color: #fff;
-    font-size: 14px;
-    line-height: 1.42857;
-    border: 1px solid #0f4562;
-    padding: 10px;
+    }
+
+    input {
+      border: 1px solid rgba(18, 25, 33, .16);
+      background-color: #f9fafb;
+      border-radius: 6px;
+      padding-right: 40px;
+      padding-top: 10px;
+      background-repeat: no-repeat;
+      background-position: right 12px center;
+    }
+
+    select {
+      border: 0;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.25);
+      outline: 0;
+      height: 40px;
+      padding: 6px 8px;
+      font-size: 14px;
+      line-height: 1.42857;
+      color: #555555;
+      background: #fff;
+      margin-bottom: 20px;
+    }
+
+    button {
+      background: #034563;
+      color: #fff;
+      font-size: 14px;
+      line-height: 1.42857;
+      border: 1px solid #0f4562;
+      padding: 10px;
+    }
   }
+}
+
+
+::-webkit-input-placeholder {
+  /* Edge */
+  color: red;
+  padding-left: 20px;
+}
+
+::-ms-input-placeholder {
+  /* Internet Explorer */
+  color: red;
+  padding-left: 20px;
+}
+
+::placeholder {
+  color: red;
+  padding-left: 20px;
 }
