--- a/src/component/house/house.scss
+++ b/src/component/house/house.scss
@@ -9,6 +9,7 @@ $blue:#337ab7;
 .cardListing {
   background: $grayLight;
   padding: 30px 0;
+
   .cardHolder {
 
     .cartItem {
@@ -107,6 +108,26 @@ $blue:#337ab7;
   }
 
   aside {
-    padding: 0 15px;
+    padding: 0;
+
+    form {
+      padding: 10px;
+
+      .btn-secondary.focus,
+      .btn-secondary:focus {
+        background: #121921;
+        font-weight: 700;
+        color: #fff;
+        box-shadow: 0 2px 6px rgba(18, 25, 33, .16);
+
+      }
+
+      button {
+        padding: 4px;
+        display: flex;
+        justify-content: space-between;
+        overflow: hidden;
+      }
+    }
   }
 }
