--- a/src/component/house/house.scss
+++ b/src/component/house/house.scss
@@ -127,6 +127,9 @@ $blue:#337ab7;
         display: flex;
         justify-content: space-between;
         overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
